Wed Jun 12 15:02:30 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextutil.c: Fix ZWJ => ZWN typo.
	(#83092, Tino Meinen)

Wed Jun 12 14:41:43 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix some problems with case statements
	for checking for omitted deps. (#84202, Jacob Berkman.)

	* configure.in: Remove USE_X11R6_XIM checks since we 
	no longer use them.

Wed Jun 12 14:18:45 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkimcontextsimple.c: Add compose sequences
 	of dead_acute + c/C => C WITH CEDDILLA.
 	(Nano Golveia, #83492)
 
2002-06-10  Hans Breuer  <hans@breuer.org>

	* gdk/makefile.msc : added gdkdisplay and gdkscreen

	* gdk/win32/gdkdisplay-win32.c (gdk_open_display) : 
	need to gdk_screen_set_default_colormap(). Also un-static
	some exported gdk_display_*() functions

	* gdk/win32/gdkdrawable-win32.c : added "gdkscreen.h"

	* gdk/win32/gdkscreen-win32.c : implement
	gdk_screen_get_number, fixed typo, added rewuired headers

	[merge from 2.0.x branch, should we really manifest 
	 GtkPlug as being an X11 only thing this way? See #58541]
	* gtk/gtkwindow.c (gtk_window_show): Conditionalize
	GTK_IS_PLUG() check on GDK_WINDOWING_X11. (Problem
	reported by Sven Neumann)

2002-06-10  Tor Lillqvist  <tml@iki.fi>

	[ merge from stable ]

	* gdk/win32/gdkmain-win32.c (gdk_screen_get_width_mm,
	gdk_screen_get_height_mm): Use the "logical dpi" to calculate
	(pseudo) physical sizes. Similar to the use of "logical dpi" in
	Pango as suggested by Joaquin Cuenca Abela.

	Two fixes by Florent Duguet:

	* gdk/win32/gdkwindow-win32.c (gdk_window_set_cursor): Correct
	semantics for setting cursor to NULL (should use cursor of parent
	window).

	* gdk/win32/gdkgc-win32.c (gdk_win32_hdc_get): Plug memory
	leak.

2002-06-10  Naba Kumar <kh_naba@users.sourceforge.net>

	* configure.in: Added hi in ALL_LINGUAS

2002-06-09  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextbtree.c (_gtk_text_btree_unref): Don't leak
	child_anchor_table.  (#84425)
